# CAS

./: .gitignore  CMakeLists.txt  cas.code-workspace  expression.natvis  readme.md  sourcelist.cmake
include/: expressionCast.hpp  utility.hpp
include/commands/: command.hpp  commandArgs.hpp  commandCallback.hpp  commandDelegate.hpp  commandResult.hpp  commandWrapper.hpp  commands.hpp  differentialCalculus.hpp  termManipulation.hpp  termMatching.hpp
include/io/: commands.hpp  engine.hpp  inputStream.hpp  ioStream.hpp  parser.hpp
include/math/: differential.hpp  expressions.hpp
include/math/expressions/: addition.hpp  binaryExpression.hpp  constant.hpp  differential.hpp  exponentiation.hpp  expression.hpp  expressionMatcher.hpp  expressions.hpp  functions.hpp  multiplication.hpp  operations.hpp  parser.hpp  simplifier.hpp  variable.hpp
include/math/expressions/functions/: function.hpp  hyperbolic.hpp  logarithm.hpp  (+1 more)
include/math/operators/: differential.hpp
mathlib/: CMakeLists.txt
mathlib/include/: except.hpp  expressionCast.hpp  mathlib.hpp
mathlib/include/debug/: debugTools.hpp
mathlib/include/expressions/: expressionMatcher.hpp  expressions.hpp  functions.hpp  operations.hpp  simplifier.hpp
mathlib/include/expressions/functions/: function.hpp  hyperbolic.hpp  logarithm.hpp  trigonometric.hpp
mathlib/include/expressions/terms/: addition.hpp  binaryExpression.hpp  constant.hpp  differential.hpp  exponentiation.hpp  expression.hpp  multiplication.hpp  number.hpp  variable.hpp
mathlib/include/expressions/terms/numeric/: complex.hpp  constants.hpp
mathlib/include/mathlib/: mathlib.hpp
mathlib/src/expressions/: expressionMatcher.cpp  expressions.cpp  simplifier.cpp
mathlib/src/expressions/functions/: function.cpp  hyperbolic.cpp  logartihm.cpp  trigonometric.cpp
mathlib/src/expressions/terms/: addition.cpp  binaryExpression.cpp  constant.cpp  differential.cpp  exponentiation.cpp  expression.cpp  multiplication.cpp  number.cpp  variable.cpp
mathlib/src/expressions/terms/numeric/: complex.cpp
mathlib/src/operators/: differential.cpp
src/: main.cpp
src/commands/: command.cpp  commandArgs.cpp  commandParsing.cpp  commandResult.cpp  commandWrapper.cpp  differentialCalculus.cpp  termManipulations.cpp
src/io/: engine.cpp  engineCallbacks.cpp  engineCommands.cpp  ioStream.cpp  parser.cpp
src/math/: differential.cpp
src/math/expressions/: addition.cpp  binaryExpression.cpp  constant.cpp  differential.cpp  exponentiation.cpp  expression.cpp  expressionMatcher.cpp  expressions.cpp  multiplication.cpp  parser.cpp  simplifier.cpp  variable.cpp
src/math/operators/: differential.cpp
test/: CMakeLists.txt  parser.cpp
(+20 files in other folders)
